# OpenEnv

./: .gitignore  Dockerfile  README.md  app.py  env.py  env_state.json  exec_env.py  inference.py  live_test.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  tasks.py  test_pytorch_integration.py  test_regex.py  validate-submission.ps1
exec_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server/: __init__.py  app.py
