[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exec-env-assistant"
version = "0.1.0"
description = "ExecEnv: A high-fidelity AI Executive Assistant Benchmark"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Vishal Deep" }
]
dependencies = [
    "openenv-core>=0.2.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["server", "."]
